--- a/data_processor.ipynb
+++ b/data_processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "398bd1e6",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "2c780625",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "fbc41cc6",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "ad159119",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "7bbc2dc6",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "eacd773e",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "7b6cd90e",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "72f2961f",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,16 +279,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "1fb7c257",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['UCSD',\n",
+       " 72.4,\n",
+       " 1.1049723756906076,\n",
+       " 63.04347826086956,\n",
+       " 95.45454545454545,\n",
+       " 17.955801104972373,\n",
+       " 52.2,\n",
+       " 45.5,\n",
+       " (60.869565217391305, 78.57142857142857),\n",
+       " 0.9254143646408839,\n",
+       " 44.166666666666664,\n",
+       " 25.641025641025642,\n",
+       " 15.193370165745856,\n",
+       " 40.0,\n",
+       " 27.8,\n",
+       " (40.0, 58.333333333333336),\n",
+       " '+1.0',\n",
+       " '-5.0']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -303,24 +323,56 @@
     "\n",
     "#create a list respresenting calculations for the game\n",
     "poss = df.loc['CAL', 'FGA']-df.loc['CAL', 'Offensive Rebounds']+df.loc['CAL', 'Total Turnovers']+.475*df.loc['CAL', 'FTA']\n",
-    "calc = [opponent, poss, team_score[opponent]/poss, (df.loc[opponent, 'FGM']+.5*df.loc[opponent, '3PTM'])*100/df.loc[opponent, 'FGA'], df.loc['CAL', 'Defensive Rebounds']*100/(df.loc['CAL', 'Defensive Rebounds']+df.loc[opponent, 'Offensive Rebounds']), df.loc[opponent, 'Total Turnovers']*100/poss, df.loc[opponent, 'Field Goal %'], df.loc[opponent, 'Three Point %'],[df.loc[opponent, 'FTA']*100/df.loc[opponent, 'FGA'], df.loc[opponent, 'FTM']*100/df.loc[opponent, 'FTA']], team_score['CAL']/poss, (df.loc['CAL', 'FGM']+.5*df.loc['CAL', '3PTM'])*100/df.loc['CAL', 'FGA'], df.loc['CAL', 'Offensive Rebounds']*100/(df.loc[opponent, 'Defensive Rebounds']+df.loc['CAL', 'Offensive Rebounds']), df.loc['CAL', 'Total Turnovers']*100/poss, df.loc['CAL', 'Field Goal %'], df.loc['CAL', 'Three Point %'],[df.loc['CAL', 'FTA']*100/df.loc['CAL', 'FGA'], df.loc['CAL', 'FTM']*100/df.loc['CAL', 'FTA']], net(df.loc['CAL', 'Offensive Rebounds']+df.loc[\"CAL\", 'Defensive Rebounds'], df.loc[opponent, 'Offensive Rebounds']+df.loc[opponent, 'Defensive Rebounds']), net(df.loc['CAL', '3PTM'], df.loc[opponent, '3PTM'])]\n"
+    "calc = [opponent, poss, team_score[opponent]/poss, (df.loc[opponent, 'FGM']+.5*df.loc[opponent, '3PTM'])*100/df.loc[opponent, 'FGA'], df.loc['CAL', 'Defensive Rebounds']*100/(df.loc['CAL', 'Defensive Rebounds']+df.loc[opponent, 'Offensive Rebounds']), df.loc[opponent, 'Total Turnovers']*100/poss, df.loc[opponent, 'Field Goal %'], df.loc[opponent, 'Three Point %'],(df.loc[opponent, 'FTA']*100/df.loc[opponent, 'FGA'], df.loc[opponent, 'FTM']*100/df.loc[opponent, 'FTA']), team_score['CAL']/poss, (df.loc['CAL', 'FGM']+.5*df.loc['CAL', '3PTM'])*100/df.loc['CAL', 'FGA'], df.loc['CAL', 'Offensive Rebounds']*100/(df.loc[opponent, 'Defensive Rebounds']+df.loc['CAL', 'Offensive Rebounds']), df.loc['CAL', 'Total Turnovers']*100/poss, df.loc['CAL', 'Field Goal %'], df.loc['CAL', 'Three Point %'],(df.loc['CAL', 'FTA']*100/df.loc['CAL', 'FGA'], df.loc['CAL', 'FTM']*100/df.loc['CAL', 'FTA']), net(df.loc['CAL', 'Offensive Rebounds']+df.loc[\"CAL\", 'Defensive Rebounds'], df.loc[opponent, 'Offensive Rebounds']+df.loc[opponent, 'Defensive Rebounds']), net(df.loc['CAL', '3PTM'], df.loc[opponent, '3PTM'])]\n",
+    "calc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "01227b35",
+   "execution_count": 25,
+   "id": "7c6c1fe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['UCSD',\n",
+       " 72.4,\n",
+       " 1.1,\n",
+       " 63.0,\n",
+       " 95.4,\n",
+       " 18.0,\n",
+       " 52.2,\n",
+       " 45.5,\n",
+       " (60.869565217391305, 78.57142857142857),\n",
+       " 0.9,\n",
+       " 44.2,\n",
+       " 25.6,\n",
+       " 15.2,\n",
+       " 40.0,\n",
+       " 27.8,\n",
+       " (40.0, 58.333333333333336),\n",
+       " '+1.0',\n",
+       " '-5.0']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc = [round(val, 1) if isinstance(val, float) else val for val in calc ]\n",
+    "calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a5901a2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#find date of game\n",
-    "def get_date(game_id):\n",
-    "    url = \"https://www.espn.com/mens-college-basketball/game/_/gameId/\" + str(game_id)\n",
-    "    r = requests.get(url)\n",
-    "    webpage = bs(r.content)\n",
-    "    date = webpage.find(\"header\", attrs={\"class\", \"top-stories__story-header\"}).find(\"span\", attrs={\"class\", \"date\"}).get_text()\n",
-    "    return date"
-   ]
+   "source": []
   }
  ],
  "metadata": {
