--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -3,20 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1722f692",
+   "id": "280de533",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utility_functions import *\n",
-    "\n",
-    "##SPECIFCY HTML parser: \"html.parser\""
+    "from utility_functions import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3fa80461",
+   "id": "67479a7c",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "80ece394",
+   "id": "7140f144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c100f6b1",
+   "id": "9c1411e8",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2dd0b3f2",
+   "id": "a7fb8d66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fbfdd968",
+   "id": "cf0fd077",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +353,7 @@
     }
    ],
    "source": [
-    "df"
+    "df\n"
    ]
   }
  ],
