--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -3,77 +3,34 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "280de533",
+   "id": "15d2f8eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utility_functions import *"
+    "from utility_functions import *\n",
+    "import pickle\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "67479a7c",
+   "id": "f3bf1fe8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Game</th>\n",
-       "      <th>Poss</th>\n",
-       "      <th>DER</th>\n",
-       "      <th>Def eFG%</th>\n",
-       "      <th>Def Reb%</th>\n",
-       "      <th>Def TO%</th>\n",
-       "      <th>Def FG%</th>\n",
-       "      <th>Def 3PT%</th>\n",
-       "      <th>Def FT RATE, %</th>\n",
-       "      <th>OER</th>\n",
-       "      <th>Off eFG%</th>\n",
-       "      <th>Off Reb%</th>\n",
-       "      <th>Off TO%</th>\n",
-       "      <th>Off FG%</th>\n",
-       "      <th>Off 3pt%</th>\n",
-       "      <th>Off FT Rate, %</th>\n",
-       "      <th>Reb +/-</th>\n",
-       "      <th>3pt +/-</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Game, Poss, DER, Def eFG%, Def Reb%, Def TO%, Def FG%, Def 3PT%, Def FT RATE, %, OER, Off eFG%, Off Reb%, Off TO%, Off FG%, Off 3pt%, Off FT Rate, %, Reb +/-, 3pt +/-]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "limit = sys.getrecursionlimit()\n",
+    "Newlimit = 10000\n",
+    "limit = sys.setrecursionlimit(Newlimit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2f4805fe",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#create datatable for this game, corresponding to Post Game Analytics\n",
     "columns = [\"Game\", \"Poss\", \"DER\", \"Def eFG%\", \"Def Reb%\", \"Def TO%\", \"Def FG%\", \"Def 3PT%\", \"Def FT RATE, %\", \"OER\", \"Off eFG%\", \"Off Reb%\", \"Off TO%\", \"Off FG%\", \"Off 3pt%\", \"Off FT Rate, %\", \"Reb +/-\", \"3pt +/-\"]\n",
@@ -82,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7140f144",
+   "execution_count": 4,
+   "id": "eb2170c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9c1411e8",
+   "execution_count": 5,
+   "id": "9f3ea554",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +172,7 @@
        "1    +3.0    -6.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a7fb8d66",
+   "execution_count": 6,
+   "id": "a49551f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,119 +198,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "cf0fd077",
+   "execution_count": 7,
+   "id": "57a83128",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Game</th>\n",
-       "      <th>Poss</th>\n",
-       "      <th>DER</th>\n",
-       "      <th>Def eFG%</th>\n",
-       "      <th>Def Reb%</th>\n",
-       "      <th>Def TO%</th>\n",
-       "      <th>Def FG%</th>\n",
-       "      <th>Def 3PT%</th>\n",
-       "      <th>Def FT RATE, %</th>\n",
-       "      <th>OER</th>\n",
-       "      <th>Off eFG%</th>\n",
-       "      <th>Off Reb%</th>\n",
-       "      <th>Off TO%</th>\n",
-       "      <th>Off FG%</th>\n",
-       "      <th>Off 3pt%</th>\n",
-       "      <th>Off FT Rate, %</th>\n",
-       "      <th>Reb +/-</th>\n",
-       "      <th>3pt +/-</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>UCSD</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>63</td>\n",
-       "      <td>95</td>\n",
-       "      <td>17</td>\n",
-       "      <td>52</td>\n",
-       "      <td>45</td>\n",
-       "      <td>(61, 79)</td>\n",
-       "      <td>0.93</td>\n",
-       "      <td>44</td>\n",
-       "      <td>25</td>\n",
-       "      <td>15</td>\n",
-       "      <td>40</td>\n",
-       "      <td>27</td>\n",
-       "      <td>(40, 58)</td>\n",
-       "      <td>+1.0</td>\n",
-       "      <td>-5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>UNLV</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>46</td>\n",
-       "      <td>78</td>\n",
-       "      <td>21</td>\n",
-       "      <td>37</td>\n",
-       "      <td>34</td>\n",
-       "      <td>(9, 60)</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>40</td>\n",
-       "      <td>25</td>\n",
-       "      <td>16</td>\n",
-       "      <td>36</td>\n",
-       "      <td>28</td>\n",
-       "      <td>(11, 100)</td>\n",
-       "      <td>+3.0</td>\n",
-       "      <td>-6.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Game  Poss  DER  Def eFG%  Def Reb%  Def TO%  Def FG%  Def 3PT%  \\\n",
-       "0  UCSD    72  1.1        63        95       17       52        45   \n",
-       "1  UNLV    60  0.9        46        78       21       37        34   \n",
-       "\n",
-       "  Def FT RATE, %   OER  Off eFG%  Off Reb%  Off TO%  Off FG%  Off 3pt%  \\\n",
-       "0       (61, 79)  0.93        44        25       15       40        27   \n",
-       "1        (9, 60)  0.85        40        25       16       36        28   \n",
-       "\n",
-       "  Off FT Rate, % Reb +/- 3pt +/-  \n",
-       "0       (40, 58)    +1.0    -5.0  \n",
-       "1      (11, 100)    +3.0    -6.0  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df\n"
+    "df.index = [\"game 1\", \"game 2\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bcb28c45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pickle df object\n",
+    "with open('pickledata.p', 'wb') as fh:\n",
+    "    pickle.dump(df, fh)"
    ]
   }
  ],
