implemented crontab automation scripts

--- a/data_processor.ipynb
+++ b/data_processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "398bd1e6",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "2c780625",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "#collect & process data based on GAME ID\n",
     "url = \"https://www.espn.com/mens-college-basketball/matchup?gameId=\" + str(401373623)\n",
     "r = requests.get(url)\n",
-    "webpage = bs(r.content)"
+    "webpage = bs(r.content, features=\"html.parser\")"
    ]
   },
   {
