--- a/data_processor.ipynb
+++ b/data_processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "398bd1e6",
    "metadata": {},
    "outputs": [],
@@ -10,25 +10,28 @@
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "from utility_functions import get_date\n",
+    "from datetime import date, datetime, timedelta\n",
+    "from dateutil.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2c780625",
    "metadata": {},
    "outputs": [],
    "source": [
     "#collect & process data based on GAME ID\n",
-    "url = \"https://www.espn.com/mens-college-basketball/matchup?gameId=\" + str(401373623)\n",
+    "url = \"https://www.espn.com/mens-college-basketball/matchup?gameId=\" + str(401377407)\n",
     "r = requests.get(url)\n",
     "webpage = bs(r.content, features=\"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "fbc41cc6",
    "metadata": {},
    "outputs": [],
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ad159119",
    "metadata": {},
    "outputs": [],
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7bbc2dc6",
    "metadata": {},
    "outputs": [],
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "eacd773e",
    "metadata": {},
    "outputs": [],
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7b6cd90e",
    "metadata": {},
    "outputs": [],
@@ -142,133 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "72f2961f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FGM</th>\n",
-       "      <th>FGA</th>\n",
-       "      <th>Field Goal %</th>\n",
-       "      <th>3PTM</th>\n",
-       "      <th>3PTA</th>\n",
-       "      <th>Three Point %</th>\n",
-       "      <th>FTM</th>\n",
-       "      <th>FTA</th>\n",
-       "      <th>Free Throw %</th>\n",
-       "      <th>Rebounds</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Defensive Rebounds</th>\n",
-       "      <th>Team Rebounds</th>\n",
-       "      <th>Assists</th>\n",
-       "      <th>Steals</th>\n",
-       "      <th>Blocks</th>\n",
-       "      <th>Total Turnovers</th>\n",
-       "      <th>Fouls</th>\n",
-       "      <th>Technical Fouls</th>\n",
-       "      <th>Flagrant Fouls</th>\n",
-       "      <th>Largest Lead</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>UCSD</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>52.200001</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>45.500000</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>78.599998</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CAL</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>27.799999</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>58.299999</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       FGM   FGA  Field Goal %  3PTM  3PTA  Three Point %   FTM   FTA  \\\n",
-       "UCSD  24.0  46.0     52.200001  10.0  22.0      45.500000  22.0  28.0   \n",
-       "CAL   24.0  60.0     40.000000   5.0  18.0      27.799999  14.0  24.0   \n",
-       "\n",
-       "      Free Throw %  Rebounds  ...  Defensive Rebounds  Team Rebounds  Assists  \\\n",
-       "UCSD     78.599998      30.0  ...                29.0            0.0     10.0   \n",
-       "CAL      58.299999      31.0  ...                21.0            0.0      4.0   \n",
-       "\n",
-       "      Steals  Blocks  Total Turnovers  Fouls  Technical Fouls  Flagrant Fouls  \\\n",
-       "UCSD     5.0     2.0             13.0   20.0              1.0             0.0   \n",
-       "CAL      5.0     1.0             11.0   20.0              0.0             0.0   \n",
-       "\n",
-       "      Largest Lead  \n",
-       "UCSD          13.0  \n",
-       "CAL           11.0  \n",
-       "\n",
-       "[2 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#turns all stats into float, tranpose matrix\n",
     "df[\"CAL\"] = pd.to_numeric(df[\"CAL\"], downcast=\"float\")\n",
@@ -279,38 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "1fb7c257",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['UCSD',\n",
-       " 72.4,\n",
-       " 1.1049723756906076,\n",
-       " 63.04347826086956,\n",
-       " 95.45454545454545,\n",
-       " 17.955801104972373,\n",
-       " 52.2,\n",
-       " 45.5,\n",
-       " (60.869565217391305, 78.57142857142857),\n",
-       " 0.9254143646408839,\n",
-       " 44.166666666666664,\n",
-       " 25.641025641025642,\n",
-       " 15.193370165745856,\n",
-       " 40.0,\n",
-       " 27.8,\n",
-       " (40.0, 58.333333333333336),\n",
-       " '+1.0',\n",
-       " '-5.0']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#calculates +/-\n",
     "def net(cal, opp):\n",
@@ -326,6 +178,58 @@
     "calc = [opponent, poss, team_score[opponent]/poss, (df.loc[opponent, 'FGM']+.5*df.loc[opponent, '3PTM'])*100/df.loc[opponent, 'FGA'], df.loc['CAL', 'Defensive Rebounds']*100/(df.loc['CAL', 'Defensive Rebounds']+df.loc[opponent, 'Offensive Rebounds']), df.loc[opponent, 'Total Turnovers']*100/poss, df.loc[opponent, 'Field Goal %'], df.loc[opponent, 'Three Point %'],(df.loc[opponent, 'FTA']*100/df.loc[opponent, 'FGA'], df.loc[opponent, 'FTM']*100/df.loc[opponent, 'FTA']), team_score['CAL']/poss, (df.loc['CAL', 'FGM']+.5*df.loc['CAL', '3PTM'])*100/df.loc['CAL', 'FGA'], df.loc['CAL', 'Offensive Rebounds']*100/(df.loc[opponent, 'Defensive Rebounds']+df.loc['CAL', 'Offensive Rebounds']), df.loc['CAL', 'Total Turnovers']*100/poss, df.loc['CAL', 'Field Goal %'], df.loc['CAL', 'Three Point %'],(df.loc['CAL', 'FTA']*100/df.loc['CAL', 'FGA'], df.loc['CAL', 'FTM']*100/df.loc['CAL', 'FTA']), net(df.loc['CAL', 'Offensive Rebounds']+df.loc[\"CAL\", 'Defensive Rebounds'], df.loc[opponent, 'Offensive Rebounds']+df.loc[opponent, 'Defensive Rebounds']), net(df.loc['CAL', '3PTM'], df.loc[opponent, '3PTM'])]\n",
     "calc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "adebedbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[datetime.datetime(2022, 1, 8, 0, 0), datetime.datetime(2022, 1, 12, 0, 0), datetime.datetime(2022, 1, 15, 0, 0), datetime.datetime(2022, 1, 23, 0, 0), datetime.datetime(2022, 1, 27, 0, 0), datetime.datetime(2022, 1, 29, 0, 0), datetime.datetime(2022, 2, 3, 0, 0), datetime.datetime(2022, 2, 5, 0, 0), datetime.datetime(2022, 2, 9, 0, 0), datetime.datetime(2022, 2, 12, 0, 0), datetime.datetime(2022, 2, 17, 0, 0), datetime.datetime(2022, 2, 19, 0, 0), datetime.datetime(2022, 2, 26, 0, 0), datetime.datetime(2022, 3, 3, 0, 0), datetime.datetime(2022, 3, 5, 0, 0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [401377403, 401377407, 401377413, 401377429, 401377432, 401377437, 401377446, 401377447, 401377453, 401377457, 401377465, 401377469, 401377483, 401377484, 401377490]\n",
+    "def get_date(game_id):\n",
+    "    try:\n",
+    "        url = \"https://www.espn.com/mens-college-basketball/game/_/gameId/\" + str(game_id)\n",
+    "        r = requests.get(url)\n",
+    "        webpage = bs(r.content, features=\"html.parser\")\n",
+    "        date = re.findall('(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s[1-9][1-9]?,\\s[0-9]{4}', webpage.find(\"title\").get_text())[0]\n",
+    "        return date\n",
+    "    except TypeError:\n",
+    "        print(game_id)\n",
+    "    except IndexError:\n",
+    "        print(game_id, 1)\n",
+    "\n",
+    "print([parse(date) for date in map(get_date, x)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4ef0baf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#collect & process data based on GAME ID\n",
+    "url = \"https://www.espn.com/mens-college-basketball/matchup?gameId=\" + str(401377407)\n",
+    "r = requests.get(url)\n",
+    "webpage = bs(r.content, features=\"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e25a81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
